pequenas att e mudei o nome do method corsFilter para preCorsFilter, para evitar confilto com o spring